final project finished after 18 hours of work

--- a/home.html
+++ b/home.html
@@ -7,28 +7,10 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css">
     <style>
-        body {
-            background-color: grey;
-        }
-        @media screen and (max-width: 820px) {
-    #favoritesFlexBox, .navFlexBox {   
-        display:flex;
-      flex-direction: column;
-      align-items:center;
-    }
-    .access {
-        margin:auto;
-    }
-    .navBarSplit {
-        margin:auto;
-    }
-    #ecommercePhoto {
-        height:5em;
-    }
+
     #favoritesFlexBox img {
         height:20em;
     }
-}
     </style>
 </head>
 <body>
@@ -70,7 +52,7 @@
     <div id="favoritesFlexBox">
         <div>
             <h2 style="text-align:center;">Favorites</h2>
-            <img style="border-radius:25%" src="images/favoriteItems.jpg" alt="4 photos cropped together?">
+            <img style="border-radius:25%;" src="images/favoriteItems.jpg" alt="4 photos cropped together?">
         </div>
             <table>
             <caption><h2>Sale Event Days</h2></caption>
@@ -109,8 +91,14 @@
 <br />
 <br />
 <br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
 <footer>
-    <p style="text-align:center;">website designed and developed by: Austin Birt</p>
+    <span class="footerContent">Website Designed and Developed by:</span> <span class="name">Austin Birt</span>
 </footer>
 </body>
 </html>
