--- a/signIn.html
+++ b/signIn.html
@@ -27,7 +27,7 @@
     <div class="form">
         <div class="fancyBox"> 
             <form action="#">
-                <h3 style="text-align:center;margin-top:0;">Login</h3>
+                <h3 style="text-align:center;margin-top:0;color:#144aa6;">Login</h3>
                 <lable for="email">Email:</lable>
                 <input type="email" name="email" id="email" placeholde="email@email.com" required>
                 <label for="password">Password:</label>
@@ -37,8 +37,8 @@
             </form>
         </div>
     </div>
-    <footer>
-        Website Designed and Developed by: Austin Birt
-    </footer>
+<footer>
+    <span class="footerContent">Website Designed and Developed by:</span> <span class="name">Austin Birt</span>
+</footer>
 </body>
 </html>
