--- a/signUp.html
+++ b/signUp.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/style.css">
   <style>
     input {
-        margin-bottom:2%
+        margin-bottom:3%
     }
     select {
         margin-bottom:10%;
@@ -27,7 +27,7 @@
     <div class="form">
         <div class="fancyBox">
             <form action="#">
-                <h2>Create Your Account</h2>
+                <h2 style="text-align:center; color:#3B5998">Create Your Account</h2>
                 <lable for="email">Email:</lable>
                 <input type="email" id="email" placeholder="email@email.com" required>
                 <lable for ="password">Password:</lable>
@@ -44,24 +44,26 @@
                 </select>
                 <label for="submit"></label>
                 <input type="submit" name="submit" value="Create An Account" id="submit">
+                <div>
+                    <div class="icon" style=" background: #dd4b39;">
+                        <a href="google.com" class="fa fa-google" style="color: white;"></a>
+                    </div>
+                    <div class="icon" style=" background: #dd4b39;">
+                        <a href="reddit.com" class="fa fa-reddit" style="color:white;"></a>
+                    </div>
+                    <div class="icon" style="background-color: #3B5998;">
+                        <a href="https://www.facebook.com/" class="fa fa-facebook" style="color:black;"></a>
+                        </div>
+                    <div class="icon" style="background: #430297;">
+                        <a href="yahoo.com" class="fa fa-yahoo" style="color:white;"></a>
+                    </div>
+                </div>
             </form>
         </div>
     </div>    
-<!-- borders are all red because of the div styles in the top of this doc -->
 
-        <div id="google" style=" background: #dd4b39;">
-            <a href="google.com" class="fa fa-google" style="color: white;"></a>
-        </div>
-        <div id="reddit" style=" background: #dd4b39;">
-            <a href="reddit.com" class="fa fa-reddit" style="color:white;"></a>
-        </div>
-        <div id="facebook" style="background-color: #3B5998;">
-            <a href="https://www.facebook.com/" class="fa fa-facebook" style="color:black;"></a>
-            </div>
-        <div id="yahoo" style="background: #430297;">
-            <a href="yahoo.com" class="fa fa-yahoo" style="color:white;"></a>
-        </div>
-    </div>
-
+<footer>
+    <span class="footerContent">Website Designed and Developed by:</span> <span class="name">Austin Birt</span>
+</footer>   
 </body>
 </html>
